# spherical_geometry

./: .clang-format  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.md  CHANGES.rst  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  README.rst  ah_bootstrap.py  benchmarks.py  conftest.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: build.yml  publish-to-pypi.yml  spherical_geometry.yml  tests.yml
astropy-helpers/: .travis.yml  CHANGES.rst  MANIFEST.in  README.rst  appveyor.yml  setup.py
astropy-helpers/astropy_helpers/: __init__.py  git_helpers.py  setup_helpers.py  test_helpers.py  version_helpers.py
astropy-helpers/astropy_helpers/commands/: _dummy.py  _test_compat.py  build_ext.py  build_sphinx.py  setup_package.py  test.py
astropy-helpers/astropy_helpers/compat/: subprocess.py
astropy-helpers/astropy_helpers/sphinx/: conf.py  setup_package.py
astropy-helpers/astropy_helpers/sphinx/ext/: edit_on_github.py
astropy-helpers/astropy_helpers/sphinx/ext/tests/: test_docscrape.py
astropy-helpers/astropy_helpers/sphinx/local/: python2_local_links.inv  python2_local_links.txt  python3_local_links.inv  python3_local_links.txt
astropy-helpers/astropy_helpers/sphinx/themes/bootstrap-astropy/: layout.html
astropy-helpers/astropy_helpers/tests/: coveragerc  test_git_helpers.py  test_setup_helpers.py  test_utils.py
cextern/: math_util.c  trim-qd-library.sh
cextern/qd-library/: INSTALL  Makefile.am  configure.ac
cextern/qd-library/include/qd/: dd_inline.h  qd_config.h
cextern/qd-library/src/: dd_real.cpp  qd_real.cpp
docs/: conf.py  index.rst
docs/packagename/: index.rst
docs/sphere/: api.rst  user.rst
docs/spherical_geometry/: api.rst  index.rst
docs/stsci_sphere/: api.rst  conf.py  index.rst
libqd/: AUTHORS  COPYING  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  config.log_2.13.18  configure  configure.ac  qd-config.in  qd.pc.in  tmp
libqd/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
libqd/config/: Makefile.in  autoconf.h
libqd/fortran/: Makefile.am  Makefile.in  tquadtsq.f  tquadtsq.txt
libqd/include/: Makefile.in
libqd/include/qd/: c_dd.h  c_qd.h  qd_config.h  qd_inline.h  qd_real.h
libqd/src/: Makefile.am  Makefile.in  c_dd.cpp  c_qd.cpp  dd_real.cpp  qd_real.cpp
libqd/tests/: Makefile.am  Makefile.in  pslq.h  quadt_test.cpp
licenses/: LICENSE.rst  QD_LIBRARY_LICENSE.rst
sphere/: __init__.py  _astropy_init.py  graph.py  great_circle_arc.py  polygon.py  setup_package.py  vector.py
sphere/src/: config.h  math_util.c
sphere/tests/: test.py  test_basic.py  test_intersection.py  test_skyline.py  test_union.py
sphere/tests/data/: difficult_intersections.txt
sphere/utils/compat/: __init__.py  weakref.py
spherical_geometry/: __init__.py  _astropy_init.py  conftest.py  graph.py  great_circle_arc.py  polygon.py  setup_package.py  vector.py
spherical_geometry/src/: math_util.c
spherical_geometry/tests/: benchmarks.py  coveragerc  helpers.py  test_basic.py  test_intersection.py  test_shared.py  test_union.py  test_util.py
spherical_geometry/tests/data/: almost_same_polygons.npz  difficult_intersections.txt
src/: config.h  math_util.c
stsci_sphere/: __init__.py  _astropy_init.py  conftest.py  graph.py  great_circle_arc.py  polygon.py  setup_package.py  vector.py
stsci_sphere/tests/: benchmarks.py  test_basic.py  test_intersection.py  test_shared.py  test_union.py  test_util.py
