[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tools:pytest]
minversion = 4.2
junit_family = xunit2
norecursedirs = .git build docs/_build

[metadata]
package_name = spherical_geometry
description = Python based tools for spherical geometry
long_description = Intersection, union, contains point and other typical ops on spherical polygons
author = Michael Droettboom
author_email = help@stsci.edu
license = BSD
url = http://www.stsci.edu/resources/software_hardware/stsci_python
edit_on_github = False
github_project = spacetelescope/spherical_geometry
project_urls =
    Bug Reports = https://github.com/spacetelescope/spherical_geometry/issues/
    Source = https://github.com/spacetelescope/spherical_geometry/
    Help = https://hsthelp.stsci.edu
