[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tools:pytest]
minversion = 4.2
junit_family = xunit2
norecursedirs = .git build docs/_build

[metadata]
package_name = spherical_geometry
description = Python based tools for spherical geometry
long_description = Intersection, union, contains point and other typical ops on spherical polygons
author = STScI
author_email = help@stsci.edu
license = BSD
url = https://github.com/spacetelescope/spherical_geometry
edit_on_github = False
github_project = spacetelescope/spherical_geometry
project_urls =
    Bug Reports = https://github.com/spacetelescope/spherical_geometry/issues/
    Source = https://github.com/spacetelescope/spherical_geometry/
    Help = https://hsthelp.stsci.edu

[coverage:run]
omit = 
    spherical_geometry/tests/*
    # And list again for running against installed versions
    */spherical_geometry/tests/*

